--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
      <ul>
-         <li> Vagrant </li>
-         <li> Docker: creando containers sin dolor de cabeza </li>
-         <li> Ansible </li>
-         <li> Integración Continua: Madurez y Productividad en el Desarrollo de Software</li>
+         <li>Vagrant</li>
+         <li>Curso de Docker: creando containers sin dolor de cabeza </li>
+         <li>Ansible</li>
+         <li>Integración Continua: Madurez y Productividad en el Desarrollo de Software</li>
      </ul>
 </body>
 </html>
