--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
      <ul>
           <li>Vagrant: Gerenciando máquinas virtuales</li>
-         <li>Curso de Docker: creando containers sin dolor de cabeza</li>
-         <li>Ansible</li>
-         <li>Integración Continua: Madurez y Productividad en el Desarrollo de Software</li>
+          <li>Curso de Docker: creando containers sin dolor de cabeza</li>
+          <li>Ansible: Infraestructura como código</li>
+          <li>Integración Continua: Madurez y Productividad en el Desarrollo de Software</li>
      </ul>
 </body>
 </html>
