--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
           <li>Curso de Docker: creando containers sin dolor de cabeza</li>
           <li>Ansible: Infraestructura como código</li>
           <li>Integración Continua: Madurez y Productividad en el Desarrollo de Software</li>
+          <li>Kubernetes: Introducción a la orquestación de containers</li>
      </ul>
 </body>
 </html>
